# ragpei2

./: .gitignore  README.md  app.py  chat.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
chroma_db/: chroma.sqlite3
ragpei2/: main.md  main.py
