[project]
name = "ragpei2"
version = "0.1.0"
description = ""
authors = [
    {name = "Josué Nunes",email = "josueemcontato@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12 ,<4.0"
dependencies = [
    "langchain (>=1.0.3,<2.0.0)",
    "langchain-google-genai (>=3.0.1,<4.0.0)",
    "pypdf (>=6.1.3,<7.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langgraph (>=1.0.2,<2.0.0)",
    "unstructured (>=0.18.15,<0.19.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "chromadb (>=1.3.2,<2.0.0)",
    "langchain-huggingface (>=1.0.1,<2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "streamlit (>=1.51.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
